--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -15,4 +15,7 @@
 #    You should have received a copy of the GNU General Public License
 #    along with this program.  If not, see <https://www.gnu.org/licenses/>.
 add_subdirectory(lib)
-add_subdirectory(examples)
+
+if(${cpputilsBuildExamples})
+	add_subdirectory(examples)
+endif()
