--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 #    CMakeLists.txt 
 #
-#    Copyright (C) 2019  Malte Kieﬂling
+#    Copyright (C) 2019  Malte Kie√üling
 #
 #    This program is free software: you can redistribute it and/or modify
 #    it under the terms of the GNU General Public License as published by
