added missing include

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,4 +39,4 @@ add_subdirectory(src)
 
 include(cmake/funcForceOutputPrefixded.cmake)
 include(cmake/funcRuntimeCopy.cmake)
-
+include(cmake/funcEnableStrictOptions.cmake)
