--- a/src/lib/CMakeLists.txt
+++ b/src/lib/CMakeLists.txt
@@ -17,3 +17,4 @@ add_subdirectory(ptrclass)
 add_subdirectory(slotmap)
 add_subdirectory(linalg)
 add_subdirectory(serialization)
+add_subdirectory(uuid)
